<resources>
    <string name="app_name">Brain Academy Project</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_bought_items">BoughtItemsActivity</string>
    <string name="text_add_group">Добавить группу</string>
    <string name="text_add_element">Добавить продукт</string>
    <string name="text_cancel">Отменить</string>
    <string name="text_inp_title">Название</string>
    <string name="text_inp_group">Название группы</string>
    <string name="text_inp_description">Описание</string>
    <string name="text_inp_price">Стоимость</string>
    <string name="err_null_title">Введите название</string>
    <string name="err_null_group">Выберите или введите группу</string>
    <string name="content_description_delete">delete</string>
    <string name="text_show_title">Название: </string>
    <string name="text_show_group">Группа: </string>
    <string name="text_show_price">Цена: </string>
    <string name="text_show_description">Описание: </string>
    <string name="text_show_status">Куплено: </string>
    <string name="text_show_date_added">Добавлено: </string>
    <string name="text_show_date_bought">Куплено: </string>
    <string name="text_show_element">Описание</string>
    <string name="text_go_to_bought">Перейти к купленным</string>
    <string name="text_go_to_not_bought">Вернуться</string>
    <string name="delete_all_question">Удалить все купленные продукты?</string>
    <string name="delete_all_description">Это действие невозможно отменить!</string>
    <string name="delete">Удалить</string>
</resources>